--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,20 @@
+amqp==2.5.1
+billiard==3.6.1.0
+celery==4.3.0
 dj-database-url==0.5.0
 Django==2.2.4
 django-heroku==0.3.1
 django-webpack-loader==0.6.0
 gunicorn==19.9.0
+importlib-metadata==0.19
+kombu==4.6.4
+more-itertools==7.2.0
 psycopg2==2.8.3
 python-dotenv==0.10.3
 pytz==2019.2
+redis==3.3.8
 sqlparse==0.3.0
+vine==1.3.0
 virtualenv==16.6.2
 whitenoise==4.1.3
+zipp==0.6.0
