--- a/requirements.txt
+++ b/requirements.txt
@@ -3,16 +3,21 @@ billiard==3.6.1.0
 celery==4.3.0
 dj-database-url==0.5.0
 Django==2.2.4
+django-celery-beat==1.5.0
 django-heroku==0.3.1
+django-timezone-field==3.0
 django-webpack-loader==0.6.0
 gunicorn==19.9.0
 importlib-metadata==0.19
 kombu==4.6.4
 more-itertools==7.2.0
 psycopg2==2.8.3
+python-crontab==2.3.8
+python-dateutil==2.8.0
 python-dotenv==0.10.3
 pytz==2019.2
 redis==3.3.8
+six==1.12.0
 sqlparse==0.3.0
 vine==1.3.0
 virtualenv==16.6.2
